# Flare

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/Flare/: boundary.h  fluid.h  solver.h
include/Flare/boundary/: BoundaryCondition.h  Box.h  Circle.h  IBoundary.h  Inflow.h  Wall.h
include/Flare/fluid/: Field.h  FieldAliases.h  Fluid.h  IFluid.h
include/Flare/solver/: BasicSolver.h  ISolver.h  Ops.h
include/Flare/solver/ops/: BoundaryUtils.h  DensityOps.h  Samplers.h  VelocityOps.h
src/: CMakeLists.txt
src/boundary/: Box.cpp  Circle.cpp  Inflow.cpp  Wall.cpp
src/fluid/: Fluid.cpp
src/solver/: BasicSolver.cpp  Ops.cpp
src/solver/ops/: BoundaryUtils.cpp  DensityOps.cpp  VelocityOps.cpp
tests/: CMakeLists.txt  FieldTest.cpp
